# evaluation_deeplocal_desc

./: .gitignore  CMakeLists.txt  README.md  extract_patches.hpp  main.cpp  pca.hpp
caffe/: README.md  extract_features.cpp
